@@ -1,7 +1,10 @@
 Revision history for WebService-Shippo
  
 {{$NEXT}}
-
+    - The CarrierAccount "active" and "production" mutators have been
+      replaced with "activate", "deactivate", "enable_test_mode" and
+      "disable_test_mode" methods.
+    - Exports boolean exports on request or via the ':bool' tag
 0.0.10    2015-10-25 19:56:30+00:00 Europe/London
     - Basic Authorization added.
     - Numerous doc and test change.
